--- a/WebRoot/skins/_base/base4/skin.properties
+++ b/WebRoot/skins/_base/base4/skin.properties
@@ -2054,3 +2054,20 @@ ChooserListViewCustomStyleContainer     = @PanelBorder@; @FixBoxModel@;
 MetaPropertyTable       =
 MetaPropertyTableCell   = padding:@SkinWrapperPadding@ @WidgetInternalPadding@; padding-top:0;
 
+#######################################################################
+#   Task List view
+#######################################################################
+
+TaskListViewAddNewTaskIcon                                  = display:inline-block; margin-right:12px;
+TaskListViewNewTaskBannerWrapper                            = @Text-hint@ @BottomSeparator@ @InactiveCursor@ @FontSize-big@ padding:@SkinWrapperPadding@; padding-right:0px; padding-left:6px;
+TaskListViewHeaderItemLabel                                 = @FontSize-slightly-big@ @Text-light@ padding: 10px 0px 10px 11px;
+TaskReadingPaneRight-ListViewItemCheckboxCell               = padding-left:10px;
+TaskReadingPaneRight-ListViewItem                           = height:80px;
+TaskReadingPaneRight-ListViewItemSubject                    = vertical-align:bottom;
+TaskReadingPaneRight-ListViewItemDate                       = vertical-align:middle;
+TaskReadingPaneRight-ListViewItemTopRowContainer            = height:60%; margin:0;
+TaskReadingPaneRight-ListViewItemBottomRowContainer         = margin-top:-6px;
+TaskReadingPaneRight-ListViewItemBottomIconOuterWrapper     = padding-right:@SkinWrapperPadding@;
+TaskReadingPaneRight-ListViewItemBottomIconInnerWrapper     = margin-left:auto;
+TaskReadingPaneRight-ListViewItemCheckIconContainerCell     = vertical-align:middle;
+TaskReadingPaneRight-ListViewItemCheckIconContainer         = display:table-cell;
